@@ -1,3 +1,8 @@
+Sun Aug 23 15:41:32 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (command_dup, command_setenv): cmd->env does not
+	  need to be { NULL, NULL }-terminated.
+
 Sun Aug 23 11:25:50 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* Makefile.am (EXTRA_DIST): Distribute gnulib/m4/gnulib-tool.m4.
